--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,20 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "api/server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/api/server.js"
-      }
-    ]
-  }
-  
+"version": 2,
+"builds": [
+{
+"src": "api/server.js",
+"use": "@vercel/node"
+}
+],
+"routes": [
+{
+"src": "/(.*)",
+"dest": "/api/server.js",
+"headers": {
+"Access-Control-Allow-Origin": "https://aniteams.vercel.app",
+"Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+"Access-Control-Allow-Headers": "X-Requested-With, content-type, Authorization"
+}
+}
+]
+}
